Fri Jul 16 18:48:52 1993  Jim Kingdon  (kingdon@rtl.cygnus.com)

	* symtab.c (find_pc_symtab): Call warning, not printf directly.

	* solib.c (solib_add): Use x{re,m}alloc, not {re,m}alloc.

Fri Jul 16 09:56:42 1993  Ian Lance Taylor  (ian@cygnus.com)

	* mipsread.c: No longer need to undefine ZMAGIC.

Thu Jul 15 18:03:37 1993  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* m88k-pinsn.c: Moved code into opcodes/m88k-dis.c.
	(print_insn): Now just calls print_insn_m88k.

Thu Jul 15 14:54:05 1993  Doug Evans  (dje@canuck.cygnus.com)

	* h8300-tdep.c (examine_prologue): Make prototype match definition.

Thu Jul 15 08:34:49 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* NEWS: Mention that remote.c now has a `load' operation.

	* hppa-tdep.c (pc_in_linker_stub): New function.
	(find_proc_framesize): Return 0 for linker stubs.
	(rp_saved): Tell the caller where rp is saved.
	(frame_chain_valid): Return 1 for linker stubs.
	(frame_saved_pc): Use return value from rp_saved.

	* stack.c (print_frame_info): When checking PC_IN_CALL_DUMMY,
	pass the sp relative to the frame in question, not the sp in the
	innermost frame.

Wed Jul 14 17:37:03 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* mipsread.c (parse_procedure): Take as argument the symtab to look
	the name up in.  Look it up with mylookup_symbol, not lookup_symbol.
	(psymtab_to_symtab_1): For stabs, pass the symtab to parse_procedure.

	* mipsread.c (mylookup_symbol): Use strcmp, not STREQ, as we have
	already checked the first characters.

	Changes from Jeffrey Law:
	* printcmd.c (makeva_list): Use MAKEVA_EXTRA_INFO to define
	machine dependent fields in the makeva_list structure.
	(makeva_size): Allocate extra space to handle gaps made by
	alignment restrictions.
	* config/pa/xm-pa.h (MAKEVA_EXTRA_INFO): Define.
	(MAKEVA_START): Initialize arglist_address field.
	(MAKEVA_ARG): Always store arguments on natural alignment 
	boundaries.  Set arglist_address to the address right after
	the args.  